@@ -1,3 +1,7 @@
+Wed Apr 13 14:58:18 2005  Søren Sandmann  <sandmann@redhat.com>
+
+	* lmctypes.h: Add this file
+
 Wed Apr 13 14:39:54 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* Commit first attempt at using GL
